# CSE199R

./: .gitignore  CMakeLists.txt  IObservers.h  README.md  demo.cpp  desktop.ini  main.cpp  resources.qrc
Controllers/: mainWindow.cpp  mainWindow.h
Models/: FileManager.cpp  FileManager.h  cameraModel.cpp  cameraModel.h
Tests/: README.md  test_CameraModel.cpp  test_FileManager.cpp
Views/: mainWindow.ui  recordingView.ui
